--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,14 @@
 version: '3.8'
 
 services:
-  postgresdb:
-    image: postgres:latest
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
-    volumes: 
-      - ./database:/docker-entrypoint-initdb.d
-    ports: 
-      - 5432:${DATABASE_PORT}
-
   python-app:
     build:
       context: .
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=development
+      - DATABASE=/database/testDB.db
     volumes:
       - "./:/app"
-    ports: 
+    ports:
       - ${APPLICATION_PORT}:5000
-    depends_on:
-      - postgresdb
